--- a/SkycaijiApp/Admin/View/Index/find_password.html
+++ b/SkycaijiApp/Admin/View/Index/find_password.html
@@ -1,7 +1,9 @@
 <include file="Common:header_public" />
 <body class="hold-transition login-page">
 <div class="login-box">
-  <div class="login-logo"><a href="{:U('Admin/index/index')}"><b>SKY</b>采集  SkyCaiji</a></div>
+  <div class="login-logo">
+    <a href="{:U('Admin/index/index')}">蓝天采集器</a>
+  </div>
   <div class="login-box-body">
     <p class="login-box-msg">{$Think.lang.find_password}</p>
 	<form action="{:U('Admin/index/find_password')}" ajax-submit="true" method="post">
