--- a/SkycaijiApp/Admin/View/Mystore/rules.html
+++ b/SkycaijiApp/Admin/View/Mystore/rules.html
@@ -21,7 +21,7 @@
 							<th class="chk">{$Think.lang.select}</th>
 							<th class="sorting{$orderClass['name']}" data-order="name" title="名称{$orderSort['name']}">名称</th>
 							<th class="sorting{$orderClass['addtime']}" data-order="addtime" title="添加时间{$orderSort['addtime']}">添加时间</th>
-							<th class="sorting{$orderClass['uptime']}" data-order="uptime" title="修改时间{$orderSort['uptime']}">修改时间</th>
+							<th class="sorting{$orderClass['uptime']}" data-order="uptime" title="更新时间{$orderSort['uptime']}">更新时间</th>
 							<th>详细</th>
 							<th>{$Think.lang.op}</th>
 						</tr>
