--- a/SkycaijiApp/Admin/View/Setting/caiji.html
+++ b/SkycaijiApp/Admin/View/Setting/caiji.html
@@ -3,8 +3,13 @@
 
 </block>
 <block name="content">
-<div class="box box-default">
-	<div class="box-body">
+<div class="nav-tabs-custom">
+	<ul class="nav nav-tabs">
+    	<li class="active"><a href="{:U('Setting/Caiji')}">采集设置</a></li>
+    	<li><a href="{:U('Setting/Proxy')}">代理设置</a></li>
+	</ul>
+	<div class="tab-content">
+		<div class="tab-pane active" style="padding:0px 5px;">
 		<form id="form_set" method="post" ajax-submit="true" role="form" action="{:U('Admin/Setting/caiji')}">
 		    <div class="form-group">
 		        <label>{$Think.lang.set_caiji_auto}</label>
@@ -33,14 +38,19 @@
 		        <p class="help-block">每次采集的数据量，留空或0表示采完为止</p>
 		    </div>
 		    <div class="form-group">
-		        <label>{$Think.lang.set_caiji_interval}</label>
+		        <label>{$Think.lang.set_caiji_interval}（单位：分钟）</label>
 		        <input type="number" name="interval" class="form-control" value="{$caijiConfig['interval']}">
-		        <p class="help-block">每次采集间隔时间（单位：分钟），设置该值可有效减轻服务器压力，留空或0表示不限制</p>
+		        <p class="help-block">可轮询目标的数据更新且有效减轻服务器压力，留空或0表示不限制</p>
 		    </div>
 		    <div class="form-group">
-		        <label>{$Think.lang.set_caiji_timeout}</label>
+		        <label>{$Think.lang.set_caiji_timeout}（单位：分钟）</label>
 		        <input type="number" name="timeout" class="form-control" value="{$caijiConfig['timeout']}">
-		        <p class="help-block">采集执行时间限制（单位：分钟），无论是否采集完毕，到达设置的时间则立刻终止采集，可防止采集太久造成服务器卡顿，留空或0表示不限制</p>
+		        <p class="help-block">无论是否采集完毕，到达设置的时间则立刻终止采集，可防止采集太久造成服务器卡顿，留空或0表示不限制</p>
+		    </div>
+		    <div class="form-group">
+		        <label>页面抓取间隔（单位：秒）</label>
+		        <input type="number" name="html_interval" class="form-control" value="{$caijiConfig['html_interval']}">
+		        <p class="help-block">可防止抓取页面太快造成对方服务器响应超时或宕机，留空或0表示不限制</p>
 		    </div>
 		    <div class="form-group">
 		        <label>图片本地化</label>
@@ -54,8 +64,10 @@
 				<button type="submit" class="btn btn-primary btn-block">{$Think.lang.save}</button>
 			</div>
 		</form>
+		</div>
 	</div>
 </div>
+		
 <script type="text/javascript">
 $('#form_set [name="auto"]').bind('click',function(){
 	if($(this).val()>0){
@@ -71,7 +83,7 @@ $('#form_set [name="run"]').bind('change',function(){
 });
 
 $('#form_set [name="auto"][value="{$caijiConfig[auto]|intval}"]').trigger("click");
-$('#form_set [name="run"]').val("{$caijiConfig[run]}").trigger("change");
+$('#form_set [name="run"]').val("{$caijiConfig[run]?$caijiConfig[run]:'backstage'}").trigger("change");
 $('#form_set [name="download_img"][value="{$caijiConfig[download_img]|intval}"]').prop('checked',true);
 </script>
 </block>
