--- a/SkycaijiApp/Admin/View/Setting/site.html
+++ b/SkycaijiApp/Admin/View/Setting/site.html
@@ -7,6 +7,14 @@
 	<div class="box-body">
 		<form id="form_set" method="post" ajax-submit="true" role="form" action="{:U('Admin/Setting/site')}">
 		    <div class="form-group">
+		        <label>关闭前台首页</label>
+		        <div class="radio">
+		        	<label><input type="radio" name="hidehome" value="1">{$Think.lang.yes}</label>
+		        	<label><input type="radio" name="hidehome" value="0">{$Think.lang.no}</label>
+		        </div>
+		        <p class="help-block">不显示前台首页，访问首页直接跳转至后台</p>
+		    </div>
+		    <div class="form-group">
 		        <label>{$Think.lang.set_site_verifycode}</label>
 		        <div class="radio">
 		        	<label><input type="radio" name="verifycode" value="1">{$Think.lang.yes}</label>
@@ -20,11 +28,8 @@
 	</div>
 </div>
 <script type="text/javascript">
-$('#form_set [name="verifycode"]').each(function(){
-	if($(this).val()=="{$siteConfig['verifycode']|intval}"){
-		$(this).attr('checked', 'checked');
-	}
-});
+$('#form_set [name="verifycode"][value="{$siteConfig['verifycode']|intval}"]').attr('checked', 'checked');
+$('#form_set [name="hidehome"][value="{$siteConfig['hidehome']|intval}"]').attr('checked', 'checked');
 
 </script>
 </block>
