--- a/SkycaijiApp/Admin/View/Task/add_form.html
+++ b/SkycaijiApp/Admin/View/Task/add_form.html
@@ -33,9 +33,9 @@
     </div>
     <div class="form-group">
         <label>{$Think.lang.task_auto}</label>
-        <div class="radio">
-        	<label><input type="radio" name="auto" value="1">{$Think.lang.yes}</label>
-        	<label><input type="radio" name="auto" value="0">{$Think.lang.no}</label>
+        <div class="input-group">
+        	<label class="radio-inline"><input type="radio" name="auto" value="1">{$Think.lang.yes}</label>
+        	<label class="radio-inline"><input type="radio" name="auto" value="0">{$Think.lang.no}</label>
         </div>
     </div>
    	<div class="form-group">
